# analise_figuracoes

./: .env  .gitignore  CLAUDE.md  README.md  briefing_graficos_claude_code.md  decisoes_metodologicas.md  metadata.csv  pyproject.toml  requirements.txt
campos_lexicais/: catalogo_termos.yaml  haraway_textil_en.txt  latour_militar_en.txt  latour_textil_en_etapa2_adicoes.txt  latour_topologia_en_etapa2_adicoes.txt
corpus/: README.md  metadata.csv  qualidade_extracao.csv
corpus/paginas/: latour_1987_science_action_en.csv  latour_1999_pandora_en.csv  latour_woolgar_1986_lab_life_en.csv
corpus/txt_fornecido/: latour_1999_recalling_nativo.txt
corpus/txt_norm/: latour_1996_clarifications_en.txt  latour_1999_recalling_en.txt
docs/: decisoes_metodologicas.md
outputs/: amostra_validacao_etapa1.csv  relatorio_extracao_etapa1.md  trajetoria_latour_1986_1999.csv  trajetoria_latour_1986_1999.md  validacao_amostral_etapa1.md
outputs/etapa2_artigos/: cocorrencia_comparacao.md  militar_classificacao_automatica.csv  relatorio_etapa2.md  (+11 more)
refinamento/: war_pandora_classificacao.csv
scripts/: 01_extract_text.py  01b_normalize_text.py  02_kwic.py  03_frequencies.py  04_visualizations.py  05_cooccurrence.py  06_sampling.py  07_trajectory.py  08_validate_sample.py  10_passo4_kwic_ampliado.py  11_passo4_graficos.py  13_audit_articles_etapa2.py  14_etapa2_tabela_comparativa.py  15_etapa2_desambiguar_militar.py  16_etapa2_cocorrencia_comparacao.py  17_etapa2_tabelas_finais.py  18_etapa2_validacao_amostral.py  23_etapa3_aime_visualizacoes.py  run_etapa1.sh
(+43 files in other folders)
