[project]
name = "analise-figuracoes"
version = "0.1.0"
description = "Análise textual de figurações em Latour, Haraway, Stengers e Ingold"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Juliane Helanski"},
]
license = {text = "MIT"}

dependencies = [
    # extração e processamento de texto
    "pdfminer.six>=20231228",
    "spacy>=3.7.0",

    # configuração via .env
    "python-dotenv>=1.0.0",

    # catálogo de termos em YAML
    "PyYAML>=6.0",

    # análise de dados
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # visualização
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",

    # redes
    "networkx>=3.2",
    "python-louvain>=0.16",

    # utilitários
    "tqdm>=4.66.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.3.0",
    "pytest>=8.0.0",
    "ipython>=8.20.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = ["E501"]  # linha longa: tolerada porque já temos black

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
